# rag-service

./: .env.example  Dockerfile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy-cloud-run.yml
docker/: init.sql
protos/rag/v1/: rag_service.proto
scripts/: generate_proto.py
src/rag_service/: __init__.py  config.py  main.py  server.py
src/rag_service/cache/: __init__.py  semantic_cache.py
src/rag_service/clients/: anthropic_client.py  openai_client.py
src/rag_service/db/: __init__.py  session.py
src/rag_service/models/: __init__.py  chunks.py  semantic_cache.py
src/rag_service/services/: __init__.py  generation_service.py  highlighting_service.py  ingestion_service.py  retrieval_service.py
tests/: __init__.py  conftest.py  test_generation_service.py  test_highlighting_service.py  test_ingestion_service.py  test_retrieval_service.py  test_semantic_cache.py  test_server.py
